[package]
name = "multidirectory"
version = "0.1.0"
edition = "2021"
description = "Multi-Directory - Multi-tenant Business Directory Platform"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full", "signal"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "fs", "add-extension"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "rust_decimal"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
dotenvy = "0.15"
handlebars = "5"
reqwest = { version = "0.11", features = ["json"] }
argon2 = "0.5"
rand = "0.8"
lazy_static = "1.4"
ring = "0.17"
hex = "0.4"
rust_decimal = { version = "1.36", features = ["serde"] }
